# nvim

./: fix.md  lazy-lock.json  mynvim.7z
lua/: lazy_config.lua
lua/core/: autocmd.lua  init.lua  keymaps.lua  settings.lua  settings.lua~  settings.luz~
lua/oemer/: lazy.lua
lua/oemer/core/: autocmd.lua  init.lua  keymaps.lua  settings.lua
lua/oemer/plugins/: auto_session.lua  breadcrums.lua  cmdalternative.lua  dashboard.lua  formatting.lua  improvedft.lua  lspprogress.lua  lualine.lua  mini.lua  miniicons.lua  neotree.lua  nvim-cmp.lua  rainbowdelimeters.lua  spectre.lua  telescope.lua  terminal.lua  treesitter.lua  trouble.lua  (+1 more)
lua/oemer/plugins/lsp/: CMakeLists.txt  compile_commands.json  lspconfig.lua  main.cpp  mason.lua
lua/oemer/plugins/lsp/.cache/clangd/index/: main.cpp.7F6AA7EF14C0B201.idx
lua/plugins/: animations.lua  auto_completion.lua  autocompletion.lua  betterdiagnostics.lua  bracket_pairing.lua  change_commenting.lua  comfy_linenumbers.lua  comment.lua  cppdebugger.lua  cppdebugger.md  cursor.lua  cursor_timeout.lua  dressing.lua  easyjump.lua  enhanced_f_t_movements.lua  fast_movement.lua  file_explorer.lua  folding.lua  ftonsteroid.lua  functionoverview.lua  hardtimenvim.lua  highlight_matching.lua  indent_line_animation.lua  indentshow.lua  init.lua  jump.lua  language_server_configs.lua  language_server_protocols.lua  languageserverconfigs.lua  languageserverprotocols.lua  leap.lua  lualine.lua  neotree.lua  onlylefthandjump.lua  pairmedaddy.lua  quicklistui.lua  scroll_bar.lua  search_and_replace.lua  searchandreplace.lua  session.lua  (+11 more)
